try to fix a bug on ios where volume and timer disappear

--- a/src/styl/video-overlay.styl
+++ b/src/styl/video-overlay.styl
@@ -521,7 +521,7 @@ $video-overlay-styles.tab-vertical-margin = $video-overlay-styles.base-size * 0.
 
 
   .swipe-up-zone-container {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     display: flex;
     justify-content: center;
